TESIS-193: implement pagination and fix SyncStatus update for incidents
- Modified IncidentSyncService to only update SyncStatus when incidents are actually processed (created > 0 or updated > 0)
- Implemented automatic pagination in DatadogIncidentClient to fetch all available incidents across multiple pages
- Updated existing tests to verify SyncStatus is not updated when no incidents are found
- Added comprehensive pagination tests to verify multi-page fetching and proper offset handling
- Prevents data loss when incident sync fails to find results due to configuration errors